--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  
+  
 }
 
 .App-logo {
@@ -15,12 +17,13 @@
 
 .App-header {
   background-color: #282c34;
+  background-image: url(./code.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(30px + 2vmin);
   color: white;
 }
 
@@ -35,4 +38,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.boxone{
+  width: 600px;
+  border: 15px solid navy;
+  color: black;
+  font-size:20px;
+  font-weight: bold;
+  background-color:hsla(200, 43%, 51%, 0.8);
+  padding: 50px;
+  margin: 20px;
+}
+.boxone1{
+  width: 430px;
+
+  height:150px;
+  font-size:25px;
+  color: white;
+  background-color:hsla(0, 100%, 0%);
+  padding: 50px;
+  margin: 20px;
 }
