--- a/src/App.css
+++ b/src/App.css
@@ -16,14 +16,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  
   background-image: url(./code.jpg);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(30px + 2vmin);
+  
   color: white;
 }
 
@@ -52,11 +52,16 @@
 }
 .boxone1{
   width: 430px;
-
   height:150px;
   font-size:25px;
   color: white;
   background-color:hsla(0, 100%, 0%);
   padding: 50px;
   margin: 20px;
+}
+
+.homecss{
+  background-color: white;
+  
+
 }
