--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: right;
   
   
 }
@@ -18,7 +18,7 @@
 .App-header {
   
   background-image: url(./code.jpg);
-  min-height: 100vh;
+  min-height: 200vh;
   display: flex;
   flex-direction: column;
   align-items: center;
